:art: Suggestion from IDEA